# papelaria-forward

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .env  .env.example  Dockerfile  README.md  conftest.py  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
backend/apps/core/: authentication.py  pagination.py  views.py
backend/apps/core/fixtures/: users.json
backend/apps/core/models/: mixins.py  person.py
backend/apps/core/serializers/: audit_serializer_mixin.py  serializers.py
backend/apps/core/tests/: conftest.py  factories.py  test_audit_serializer_mixin.py  test_jwt_auth.py  test_mixins.py  test_models.py  test_serializers.py  test_throttling.py
backend/apps/customer/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/customer/fixtures/: customers.json
backend/apps/customer/migrations/: 0001_initial.py  0002_alter_customer_created_by_alter_customer_updated_by.py
backend/apps/customer/tests/: factories.py  test_customer_serializers.py  test_customer_views.py
backend/apps/product/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/product/fixtures/: products.json
backend/apps/sale/: admin.py  filters.py  urls.py
backend/apps/seller/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  settings_test.py  urls.py
backend/utils/: date_parsers.py  functions_utils.py  validators.py
backend/utils/tests/: test_date_parsers.py  test_functions_utils.py  test_validators.py
(+105 files in other folders)
