[project]
name = "papelaria-forward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "factory-boy>=3.3.3",
    "psycopg[binary]>=3.2.0",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
]